2006-10-10 Borut Razem <borut.razem AT siol.net>

	* debugger/mcs51/break.[ch], debugger/mcs51/cmd.c,
	  debugger/mcs51/sdcdb.[ch], debugger/mcs51/simi.c:
	  [ 1185668 ] add gnu readline support to sdcdb -
	  prepared for READLINE, not enabled yet

2006-10-10 Raphael Neider <rneider AT web.de>

	* src/pic16/pcode.c (pic16_pCode2str): use isACCESS_BANK macro
	* src/pic16/devices.inc,
	* device/include/pic16 (pic18f[24]620.h),
	* device/include/pic18fregs.h,
	* device/lib/pic16/pics.all,
	* device/lib/pic16/libdev/pic18f[24]{620,525}.c): added support for
	  18f2620, 18f4620, 18f2525, and 18f4525 devices, thanks to
	  Gary Plumbridge and Anton Strobl

2006-10-10 Raphael Neider <rneider AT web.de>

	* src/pic/main.c (_pic14_parseOptions): added --stack-loc=NUM and
	  --stack-siz=NUM options to configure the argument passing stack
	* src/pic/main.h: added stackLocation and stackSize to pic14_options_t
	* src/pic/device.c (mapRegister): catch out-of-memory SIGSEGVs,
	  (pic14_getSharebankSize): obey --stack-siz=NUM,
	  (pic14_getSharebankAddress): obey --stack-loc=NUM

2006-10-08 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* doc/sdccman.lyx: added to the manual
	* doc/figures/ddd_example.png: added (neither pdflatex nor
	most browsers seem to like the .eps file)

2006-10-06 Bernhard Held <bernhard AT bernhardheld.de>

	* src/SDCCglue.c (tempfileandname): changed un*x tmp search paths
	to /tmp and /var/tmp acc. LSB
	* src/SDCCast.c (addCast): Fixed bug 1571231: promote in case of
	RESULT_TYPE_IFX
	* support/regression/tests/onebyte.c: added test

2006-10-05 Jesus Calvino-Fraga <jesusc at ece.ubc.ca>

	* src/mcs51/gen.c: emitcode for "add a,0x%02x" requires only 8 bits.

2006-10-05 Borut Razem <borut.razem AT siol.net>

	* partially fixed [ 1570701 ] peephole - not replacing code from multiline macros,
	  thanks to dfulab:
	  - sdcc.dsw: changed property eol-style to CRLF
	  - support/scripts/resource.rc: replaced references to "afxres.h" with "winres.h"
