@@ -1026,11 +1026,11 @@ int pic14_getHasSecondConfigReg(void)
  *-----------------------------------------------------------------*/
 int pic14_getSharebankSize(void)
 {
-	if (pic14_options.stackSize <= 0) {
+	if (options.stack_size <= 0) {
 		// default size: 16 bytes
 		return 16;
 	} else {
-		return pic14_options.stackSize;
+		return options.stack_size;
 	}
 }
 
@@ -1044,7 +1044,7 @@ int pic14_getSharebankSize(void)
 int pic14_getSharebankAddress(void)
 {
 	int sharebankAddress = 0x7f;
-	if (pic14_options.stackLocation != 0) {
+	if (options.stack_loc != 0) {
 	    // permanent (?) workaround for pic16f84a-like devices with hardly
 	    // any memory:
 	    // 0x00-0x0B SFR
@@ -1052,7 +1052,7 @@ int pic14_getSharebankAddress(void)
 	    // 0x50-0x7F unimplemented (reads as 0),
 	    // 0x80-0x8B SFRs (partly mapped to 0x0?)
 	    // 0x8c-0xCF mapped to 0x0C-0x4F
-	    sharebankAddress = pic14_options.stackLocation + pic14_getSharebankSize() - 1;
+	    sharebankAddress = options.stack_loc + pic14_getSharebankSize() - 1;
 	} else {
 	    /* If total RAM is less than 0x7f as with 16f84 then reduce
 	     * sharebankAddress to fit */
